# CyberPetProject

./: .gitignore  CLAUDE.md  README.md  SKILL.md
CyberPet/: CyberPet.ino  README.md  dict.cpp  dict.h  dict_backend_sd.cpp  dict_format.h  dict_ui.cpp  dict_update.cpp  dict_update.h  habits.cpp  habits.h  pet.cpp  pet.h  sprite_layout.h  sprites.c  sprites.h  storage.cpp  storage.h  timekeeping.cpp  timekeeping.h  ui.cpp  ui.h  wifi_sync.cpp  wifi_sync.h
CyberPetDashboard/: Dockerfile  README.md  docker-compose.yml  usb-bridge.py
CyberPetDashboard/backend/: package-lock.json  package.json  server.js  store.js
CyberPetDashboard/backend/data/: store.json
CyberPetDashboard/public/: app.js  index.html  style.css
CyberPet_1_43C/: CyberPet_1_43C.ino  bsp_config.h  esp32_s3_touch_amoled_1.43c.cpp  esp32_s3_touch_amoled_1.43c.h  habits.h  i2c_bsp.cpp  i2c_bsp.h  pet.cpp  secrets.h.example  storage.h  timekeeping.h  ui.cpp  ui.h  wifi_sync.h
CyberPet_1_75B/: CyberPet_1_75B.ino  dict.cpp  dict.h  dict_format.h  dict_ui.cpp  dict_ui.h  es8311.c  habits.cpp  habits.h  pet.cpp  pet.h  pin_config.h  sprites.c  storage.cpp  storage.h  timekeeping.cpp  ui.cpp  ui.h  wifi_sync.cpp  wifi_sync.h
tools/: gen_sprites.py  make_dict.py  push_dict.py
tools/art/: back.aseprite  smol.aseprite  walk.aseprite  walkDown.aseprite
web_sim/: CMakeLists.txt  README.md  build.sh  dict_backend_stdio.cpp  lv_conf.h  main_web.cpp  shell.html
web_sim/shim/: Arduino.h
